# perception_ros2

./: .clang-format  .clang-tidy  .cmake-format.py  .gitignore  .gitmodules
darknet_ros/: CMakeLists.txt  package.xml
darknet_ros/config/: yolov2-tiny.yaml
darknet_ros/config/cfg/: yolov4-bdd100k.cfg  yolov4-tiny-bdd100k.cfg
darknet_ros/config/weights/: README
darknet_ros/src/: darknet_ros.hpp  object_detector.cc
darknet_ros/yolo_network_config/cfg/: yolov4.cfg
perception_interfaces/: CMakeLists.txt  package.xml
perception_interfaces/msg/: BoundingBox.msg  BoundingBoxes.msg
